2010-10-03 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix index declaration in model file (#24, #70).

2010-09-25 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Supports multiple nids per server and --network option (#74).

2010-09-22  Stephane Thiell  <stephane.thiell@cea.fr>
	* shine command man page update.

2010-09-02 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Some cleaning in shine.conf supported options. (#66)

2010-08-30 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix bug when using failover.
	* Fix bug when installing/removing configuration on ha_node (#72).

2010-08-18  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix bug when mount on admin node raises exception with clusterdb (#76).

2010-07-29  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix bug with 'shine status' on a bad node.
	* Fix traceback when a node crash during shine execution.
	* Fix bad message with 'shine stop -L'

2010-07-23  Stephane Thiell  <stephane.thiell@cea.fr>
	* Release: 0.908

2010-07-17  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix bad argument parsing (ticket #55)

2010-07-02  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Clean example model file.
	* Remove unsupported 'failover' parameter in model file (ticket #66).
	* Commmand mount, umount and status display progress information (ticket
	  #2).

2010-06-17  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Better target checks (ticket #71).

2010-06-16  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix error when a target raises an event failed.

2010-06-11  Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix failover with more than one failnode.

2010-05-21  Stephane Thiell  <stephane.thiell@cea.fr>
	* Release: 0.907

2010-05-21 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Hostname resolution improvements (fix ticket #60 and #61).

2010-05-19  Aurelien Degremont  <aurelien.degremont@cea.fr>